# deliverydist

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9c2099a6d0e1_create_query_table.py
backend/app/: main.py  sql_app.db
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/endpoints/: query.py
backend/app/controllers/: base.py  query_controller.py
backend/app/core/: logger.py
backend/app/db/: database.py  db_management.py  models.py
backend/app/exceptions/: __init__.py
backend/app/models/: query.py  table_model.py
backend/app/repositories/: base.py  query_repository.py
backend/app/schemas/: query.py
backend/app/services/: base.py  distance_calculator.py  error_handler.py  geocoding.py
backend/app/utils/: date.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_query.py
frontend/: Dockerfile  fly.toml  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: DistanceCalculator.tsx
questions/: answers.md
