[tool.poetry]
name = "deliverydist"
version = "0.1.0"
description = ""
authors = ["Dennis Gera <geradennis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.36"
requests = "^2.32.3"
python-multipart = "^0.0.19"
aiofiles = "^24.1.0"
geopy = "^2.4.1"
pendulum = "^3.0.0"
alembic = "^1.14.0"
httpx = "^0.28.1"
loguru = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
